src/styles.scss
/* You can add global styles to this file, and also import other style files */

/*#region mixing*/
@mixin flex-column {
  display: flex;
  flex-direction: column;
}

@mixin flex-column-center {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@mixin flex-row {
  display: flex;
  flex-direction: row;
}

@mixin flex-row-center {
  display: flex;
  flex-direction: row;
  align-items: center;
}

/*#endregion */

/*#region variables colors*/
$primary-accent-color-light: #dedede;
$link-color: #099d8c;
$input-red: rgb(255, 0, 0);

/*#endregion */

/*#region html, body, main, content*/
html,
body {
  height: 100%;
}

body {
  margin: 0;
}

// Make the Component injected by Router Outlet full height:
main {
  @include flex-column;
  > *:not(router-outlet) {
    flex: 1;
    display: block;
  }
}

.content {
  flex: 1;
}
/*#endregion */

/*#region toolbar*/

// Sticky header
app-header {
  position: sticky;
  top: 0;
  z-index: 1;
}

.mat-toolbar {
  vertical-align: middle;
}
/*#endregion */

/*#region links*/
.link:link,
.link:visited {
  color: $link-color;
  text-decoration: none;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  color: rgb(231, 231, 231);
}
/*#endregion */

/*#region tooltip*/
.mat-tooltip.tooltip {
  font-size: 0.9em;
}

.mat-tooltip {
  font-size: 1em;
}
/*#endregion */

/*#region snackbar*/
snack-bar-container.snackbar-success {
  background-color: #58c44a !important;
}

snack-bar-container.snackbar-info {
  background-color: $primary-accent-color-light !important;
}
/*#endregion */

/*#region form*/
mat-form-field {
  width: 100%;
}

input {
  text-overflow: ellipsis;
}

.mat-error,
.mat-form-field.mat-form-field-invalid .mat-form-field-label,
.mat-form-field.mat-form-field-invalid
  .mat-form-field-label
  .mat-form-field-required-marker {
  color: $input-red;
}

.mat-form-field.mat-form-field-invalid .mat-form-field-ripple {
  background-color: $input-red;
}

/*#endregion */

/*#region slide toggle*/
// .mat-slide-toggle-thumb-container har default z-index 0
mat-slide-toggle
  > label
  > span.mat-slide-toggle-bar
  > span.mat-slide-toggle-thumb-container {
  z-index: 0;
}

.mat-slide-toggle-content {
  @include flex-row-center;
}
/*#endregion */

/*#region card*/
.mat-card-title {
  line-height: normal;
}
/*#endregion */

/*#region expansion-panel*/
.mat-expansion-panel-content .mat-expansion-panel-body {
  padding: 0 1em 1em;
}
/*#endregion */

/*#region dark and light mode*/
.dark-mode .mat-expansion-panel {
  background: #414141;
}

.light-mode .mat-expansion-panel {
  background: #fcfcfc;
}
/*#endregion */

.dark-mode .mat-chip.mat-standard-chip {
  background-color: lighten(#2c2c2c, 5%);
  color: #fff;
}

.toolbar-chip-list .mat-standard-chip {
  height: 3em;
}

